--- a/src/components/scss/General.scss
+++ b/src/components/scss/General.scss
@@ -13,6 +13,18 @@ body{
   font-family:$primary-font ;
 }
 
+img{
+  max-width: 100%;
+}
+
+li{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+
 .debug{
   background-color: pink;
   border: 1px solid black;
