--- a/src/components/scss/General.scss
+++ b/src/components/scss/General.scss
@@ -31,3 +31,9 @@ a{
   background-color: pink;
   border: 1px solid black;
 }
+
+.container{
+  width: 80%;
+  border: 1px solid red;
+  margin: 0 auto;
+}
