--- a/src/components/scss/Mixin.scss
+++ b/src/components/scss/Mixin.scss
@@ -11,5 +11,8 @@
     justify-content: space-between;
   }@else if $type == "evenly"{
     justify-content: space-evenly;
+  }@else if $type == "column"{
+    flex-direction: column;
+    justify-content: end;
   }
 }
