--- a/src/components/scss/Mixin.scss
+++ b/src/components/scss/Mixin.scss
@@ -18,5 +18,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+  }@else if $type == "column-items-center"{
+    align-items:center;
+    flex-direction: column;
   }
 }
