--- a/src/components/scss/Typography.scss
+++ b/src/components/scss/Typography.scss
@@ -2,6 +2,7 @@
 $primary-color:#000000;
 $secondary-color:#F2870C;
 $tertiary-color:#FFFFFF;
+$quaternary-color:#CFCDCE;
 
 //Font
 $primary-font: "Open-sans", sans-serif;
