--- a/src/components/scss/General.scss
+++ b/src/components/scss/General.scss
@@ -31,6 +31,10 @@ p{
   color:$quaternary-color;
 }
 
+i{
+  cursor: pointer;
+}
+
 button{
   border-style: none;
   border: 1px solid $secondary-color;
